package com.company;

import java.util.ArrayList;

public abstract class Filtro {
    public  abstract void ordenar(ArrayList<Cancion> canciones);
}
